--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="A Portfolio Website designed and created by Web Developer Sonu"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Sonu",
+        "image": "https://starlit-crostata-de4194.netlify.app/assets/heroImage-01ab6b91.png"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
